# window-painter

./: .editorconfig  .gitignore  README.md  dev.jamiethalacker.window_painter.yml  meson.build
build-aux/: dev.jamiethalacker.window_painter.json
data/: dev.jamiethalacker.window_painter.appdata.xml.in  dev.jamiethalacker.window_painter.desktop.in  dev.jamiethalacker.window_painter.gresource.xml  dev.jamiethalacker.window_painter.gschema.xml  meson.build  style.css
data/icons/: meson.build
data/layouts/: colour-switcher.ui  defeat-dialog.ui  difficulty-selector.ui  game-board.ui  help-overlay.ui  victory-dialog.ui  window.ui
data/styles/: colours.css
po/: LINGUAS  POTFILES  fr.po  it.po  meson.build  nl.po  pt_BR.po  window_painter.pot
src/: application.vala  config.vala.in  main.vala  meson.build  utils.vala  window.ui  window.vala  window_painter.gresource.xml
src/dialogs/: defeat-dialog.vala  victory-dialog.vala
src/models/: colours.vala  difficulty.vala
src/objects/: signals.vala  state.vala
src/widgets/: colour-switcher.vala  difficulty-selector.vala  game-board.vala
